[project]
name = "pm-analytics"
version = "0.1.0"
description = "PM Analytics MCP server for OpenProject project health, EVM, risk, and portfolio analysis"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
